--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -202,7 +202,7 @@
               >
               <a
                 style="opacity: inherit"
-                href="solutions.php"
+                href="products.php"
                 class="site-btn sb-dark"
                 >Products</a
               >
@@ -632,7 +632,7 @@
             <ul class="footer-menu text-center">
               <li class="active"><a href="main.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.php">Products</a></li>
+              <li><a href="products.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
