--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -313,7 +313,7 @@
                   <!-- <div class="si-icon"> -->
                   <a href="./tacooler.php">
                     <img
-                      src="img/newimage2.png"
+                      src="img/charged-air-cooler-products.png"
                       alt="Charged Air Coolers on homepage"
                       height="100px"
                     />
