names changed of product pages

--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -337,17 +337,17 @@
                   <a class="hover1" href="./radiator.php"> Radiators</a>
                 </li>
                 <li>
-                  <a class="hover1" href="./mradiator.php"
+                  <a class="hover1" href="./heat-exchangers.php"
                     >Custom designed heat exchangers</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./acooler.php"
+                  <a class="hover1" href="./oil-coolers.php"
                     >Oil coolers and condensers</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.php"
+                  <a class="hover1" href="./charged-air-cooler.php"
                     >Charged Air Cooler</a
                   >
                 </li>
