--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -1174,17 +1174,17 @@
                   <a class="hover1" href="./radiator.php"> Radiators</a>
                 </li>
                 <li>
-                  <a class="hover1" href="./mradiator.php"
+                  <a class="hover1" href="./heat-exchangers.php"
                     >Custom designed heat exchangers</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./acooler.php"
+                  <a class="hover1" href="./oil-coolers.php"
                     >Oil coolers and condensers</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
+                  <a class="hover1" href="./charged-air-cooler.php">Charged Air Cooler</a>
                 </li>
                 <li>
                   <a class="hover1" href="./mbradiator.php"
