--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -334,17 +334,17 @@ with a passion to create the best quality product for our clients to achieve cus
                   <a class="hover1" href="./radiator.php"> Radiators</a>
                 </li>
                 <li>
-                  <a class="hover1" href="./mradiator.php"
+                  <a class="hover1" href="./heat-exchangers.php"
                     >Custom designed heat exchangers</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./acooler.php"
+                  <a class="hover1" href="./oil-coolers.php"
                     >Oil coolers and condensers</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.php"
+                  <a class="hover1" href="./charged-air-cooler.php"
                     >Charged Air Cooler</a
                   >
                 </li>
