--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -3,7 +3,7 @@
   <head>
     <title>Varanasi Unit | Saaswad Heat Transfer And Engineering</title>
     <meta charset="UTF-8" />
-    <meta name="We are situated in the oldest city of India and we have superlative and dedicated workmanship ." content="SAASWAD.com" />
+    <meta name="Description" content="We are situated in the oldest city of India and we have superlative and dedicated workmanship." />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
