--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -3,7 +3,7 @@
   <head>
     <title>Pune Unit | Saaswad Heat Transfer And Engineering</title>
     <meta charset="UTF-8" />
-    <meta name="We are located in the industrial area in Chakan. It helps us because of the easy availability of suppliers which meets our requirements of raw materials and equipment for production" content="SAASWAD.com" />
+    <meta name="Description" content="We are located in the industrial area in Chakan. It helps us because of the easy availability of suppliers which meets our requirements of raw materials and equipment for production" />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
