--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -3,7 +3,10 @@
   <head>
     <title>Pune Unit | Saaswad Heat Transfer And Engineering</title>
     <meta charset="UTF-8" />
-    <meta name="Description" content="We are located in the industrial area in Chakan. It helps us because of the easy availability of suppliers which meets our requirements of raw materials and equipment for production" />
+    <meta
+      name="Description"
+      content="We are located in the industrial area in Chakan. It helps us because of the easy availability of suppliers which meets our requirements of raw materials and equipment for production"
+    />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -151,7 +154,7 @@
             <li>
               <a href="products.php">Products</a>
             </li>
-            <li><a href="blog.html">Facilities</a></li>
+            <li><a href="facilities.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
@@ -287,7 +290,7 @@
               <li><a href="main.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="products.php">Products</a></li>
-              <li><a href="blog.html">Facilities</a></li>
+              <li><a href="facilities.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
