--- a/industryinc/elements.html
+++ b/industryinc/elements.html
@@ -101,7 +101,7 @@
                 <li><a href="elements.html">Elements</a></li>
               </ul>
             </li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="facilities.html">Blog</a></li>
             <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
@@ -593,7 +593,7 @@
                 <li><a href="main.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="products.php">products</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="facilities.html">Blog</a></li>
                 <li><a href="contact.php">Contact</a></li>
               </ul>
             </div>
