--- a/industryinc/facilities.html
+++ b/industryinc/facilities.html
@@ -259,7 +259,7 @@
             <li>
               <a href="products.php">Products</a>
             </li>
-            <li class="active"><a href="blog.html">Facilities</a></li>
+            <li class="active"><a href="facilities.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
@@ -1128,7 +1128,7 @@
               <li><a href="main.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="products.php">Products</a></li>
-              <li class="active"><a href="blog.html">Facilities</a></li>
+              <li class="active"><a href="facilities.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
