--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -173,7 +173,7 @@
             <li>
               <a href="products.php">Products</a>
             </li>
-            <li><a href="blog.html">Facilities</a></li>
+            <li><a href="facilities.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
@@ -633,7 +633,7 @@
               <li class="active"><a href="main.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="products.php">Products</a></li>
-              <li><a href="blog.html">Facilities</a></li>
+              <li><a href="facilities.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
