--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -152,7 +152,7 @@
             <li>
               <a href="products.php">Products</a>
             </li>
-            <li><a href="blog.html">Facilities</a></li>
+            <li><a href="facilities.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
@@ -288,7 +288,7 @@ with a passion to create the best quality product for our clients to achieve cus
               <li><a href="main.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="products.php">Products</a></li>
-              <li><a href="blog.html">Facilities</a></li>
+              <li><a href="facilities.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
