--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -262,7 +262,7 @@
                   <!-- <div class="si-icon"> -->
                   <a href="./radiator.php"
                     ><img
-                      src="img/industrial-radiators-homepage.JPG"
+                      src="img/industrial-radiators-homepage.jpg"
                       alt="Industrial Radiators on homepage"
                       height="100px"
                   /></a>
